finish shop item activity & finish view model for this activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/Theme.ShoppingList">
         <activity
             android:windowSoftInputMode="adjustResize"
-            android:name=".ShopItemActivity"
+            android:name=".presentation.ShopItemActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.MainActivity"
